--- a/pages/score/score.html
+++ b/pages/score/score.html
@@ -39,7 +39,7 @@
     </ion-col>
   </ion-row>
   <ion-row *ngIf="matchComplete">
-    <ion-col>{{result}}</ion-col>
+    <ion-col col-6>{{result}}</ion-col>
   </ion-row>
 </ion-grid>
 
