--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -9,15 +9,24 @@
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col col-12>
-        <label>Number of Players</label>
+      <ion-col col-6>
+        <label>Number of Players</label>        
+      </ion-col>
+      <ion-col col-6>        
         <input type="number" [(ngModel)]="numberOfPlayers">
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col col-12>
-        <label>Number of Overs</label>
+      <ion-col col-6>
+        <label>Number of Overs</label>        
+      </ion-col>
+      <ion-col col-6>        
         <input type="number" [(ngModel)]="numberOfOvers">
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-6>
+        <button ion-button color="dark" (click)="submit(numberOfPlayers,numberOfOvers)">Start Match</button>
       </ion-col>
     </ion-row>
   </ion-grid>
